--- a/hdi/hdi_warehouse_3d/views/warehouse_layout_views.xml
+++ b/hdi/hdi_warehouse_3d/views/warehouse_layout_views.xml
@@ -26,9 +26,7 @@
         <field name="model">warehouse.layout</field>
         <field name="arch" type="xml">
             <form string="Warehouse Layout">
-                <header>
-                    <button name="get_layout_info" string="View 3D Layout" type="object" class="oe_highlight" icon="fa-cube"/>
-                </header>
+                <header></header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -105,7 +103,7 @@
                         </page>
                         
                         <page string="3D Viewer" name="viewer_3d">
-                            <field name="id" widget="warehouse_layout_viewer" nolabel="1"/>
+                            <div class="warehouse_layout_viewer_container" style="width: 100%; height: 600px; border: 1px solid #ccc;"></div>
                         </page>
                     </notebook>
                 </sheet>
