--- a/hdi/stock_3d_custom_view/views/stock_warehouse_views.xml
+++ b/hdi/stock_3d_custom_view/views/stock_warehouse_views.xml
@@ -6,14 +6,15 @@
         <field name="model">stock.warehouse</field>
         <field name="inherit_id" ref="stock.view_warehouse"/>
         <field name="arch" type="xml">
-            <!-- Add Layout Editor button in warehouse form header -->
-            <xpath expr="//header" position="inside">
-                <button type="object" 
-                        name="action_open_warehouse_layout_editor"
-                        string="Layout Editor (2D/3D)" 
-                        id="warehouse_layout_editor_button"
-                        class="btn btn-primary"
-                        icon="fa-cube"/>
+            <!-- Add Layout Editor button at the top of the form -->
+            <xpath expr="//sheet" position="before">
+                <div class="alert alert-info">
+                    <button type="object" 
+                            name="action_open_warehouse_layout_editor"
+                            string="Open Layout Editor (2D/3D)" 
+                            id="warehouse_layout_editor_button"
+                            class="btn btn-primary btn-lg"/>
+                </div>
             </xpath>
             <!-- Add 3D Properties tab in warehouse form -->
             <xpath expr="//notebook" position="inside">
