--- a/hdi/hdi_warehouse_map/views/lot_history_views.xml
+++ b/hdi/hdi_warehouse_map/views/lot_history_views.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Lot History Tree View -->
+    <!-- Lot History List View -->
     <record id="view_lot_history_tree" model="ir.ui.view">
-        <field name="name">lot.history.tree</field>
+        <field name="name">lot.history.list</field>
         <field name="model">lot.history</field>
         <field name="arch" type="xml">
-            <tree string="Lot Movement History" create="0" edit="0">
+            <list string="Lot Movement History" create="0" edit="0">
                 <field name="date"/>
                 <field name="lot_id"/>
                 <field name="product_id"/>
@@ -16,7 +16,7 @@
                 <field name="uom_id"/>
                 <field name="reference"/>
                 <field name="user_id"/>
-            </tree>
+            </list>
         </field>
     </record>
     
@@ -93,6 +93,6 @@
     <record id="action_lot_history" model="ir.actions.act_window">
         <field name="name">Lot Movement History</field>
         <field name="res_model">lot.history</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
