--- a/hdi/hdi_warehouse_map/views/stock_location_views.xml
+++ b/hdi/hdi_warehouse_map/views/stock_location_views.xml
@@ -32,7 +32,7 @@
     
     <!-- Extend Stock Quant View -->
     <record id="view_stock_quant_tree_inherit" model="ir.ui.view">
-        <field name="name">stock.quant.tree.inherit</field>
+        <field name="name">stock.quant.list.inherit</field>
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.stock_quant_view_tree"/>
         <field name="arch" type="xml">
