--- a/hdi/hdi_warehouse_map/views/stock_move_views.xml
+++ b/hdi/hdi_warehouse_map/views/stock_move_views.xml
@@ -17,9 +17,9 @@
         </field>
     </record>
     
-    <!-- Extend Stock Move Tree View -->
+    <!-- Extend Stock Move List View -->
     <record id="view_stock_move_tree_inherit" model="ir.ui.view">
-        <field name="name">stock.move.tree.inherit</field>
+        <field name="name">stock.move.list.inherit</field>
         <field name="model">stock.move</field>
         <field name="inherit_id" ref="stock.view_move_tree"/>
         <field name="arch" type="xml">
