--- a/hdi/hdi_warehouse_map/views/warehouse_aisle_views.xml
+++ b/hdi/hdi_warehouse_map/views/warehouse_aisle_views.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Aisle Tree View -->
+    <!-- Aisle List View -->
     <record id="view_warehouse_aisle_tree" model="ir.ui.view">
-        <field name="name">warehouse.aisle.tree</field>
+        <field name="name">warehouse.aisle.list</field>
         <field name="model">warehouse.aisle</field>
         <field name="arch" type="xml">
-            <tree string="Warehouse Aisles">
+            <list string="Warehouse Aisles">
                 <field name="sequence" widget="handle"/>
                 <field name="code"/>
                 <field name="name"/>
@@ -14,7 +14,7 @@
                 <field name="rack_count"/>
                 <field name="capacity_utilization" widget="progressbar"/>
                 <field name="active" widget="boolean_toggle"/>
-            </tree>
+            </list>
         </field>
     </record>
     
@@ -79,6 +79,6 @@
     <record id="action_warehouse_aisle" model="ir.actions.act_window">
         <field name="name">Warehouse Aisles</field>
         <field name="res_model">warehouse.aisle</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
