--- a/hdi/hdi_warehouse_map/views/warehouse_bin_views.xml
+++ b/hdi/hdi_warehouse_map/views/warehouse_bin_views.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Bin Tree View -->
+    <!-- Bin List View -->
     <record id="view_warehouse_bin_tree" model="ir.ui.view">
-        <field name="name">warehouse.bin.tree</field>
+        <field name="name">warehouse.bin.list</field>
         <field name="model">warehouse.bin</field>
         <field name="arch" type="xml">
-            <tree string="Warehouse Bins" decoration-danger="is_blocked" decoration-muted="state == 'empty'">
+            <list string="Warehouse Bins" decoration-danger="is_blocked" decoration-muted="state == 'empty'">
                 <field name="complete_name"/>
                 <field name="zone_id"/>
                 <field name="aisle_id"/>
@@ -22,7 +22,7 @@
                 <field name="capacity_utilization" widget="progressbar"/>
                 <field name="is_blocked" widget="boolean_toggle"/>
                 <field name="active" widget="boolean_toggle"/>
-            </tree>
+            </list>
         </field>
     </record>
     
@@ -253,7 +253,7 @@
     <record id="action_warehouse_bin" model="ir.actions.act_window">
         <field name="name">Warehouse Bins</field>
         <field name="res_model">warehouse.bin</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{'search_default_active': 1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
@@ -269,7 +269,7 @@
     <record id="action_blocked_bins" model="ir.actions.act_window">
         <field name="name">Blocked Bins</field>
         <field name="res_model">warehouse.bin</field>
-        <field name="view_mode">tree,form,kanban</field>
+        <field name="view_mode">list,form,kanban</field>
         <field name="domain">[('is_blocked', '=', True)]</field>
         <field name="context">{'search_default_blocked': 1}</field>
     </record>
