--- a/hdi/hdi_warehouse_map/views/warehouse_level_views.xml
+++ b/hdi/hdi_warehouse_map/views/warehouse_level_views.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Level Tree View -->
+    <!-- Level List View -->
     <record id="view_warehouse_level_tree" model="ir.ui.view">
-        <field name="name">warehouse.level.tree</field>
+        <field name="name">warehouse.level.list</field>
         <field name="model">warehouse.level</field>
         <field name="arch" type="xml">
-            <tree string="Warehouse Levels">
+            <list string="Warehouse Levels">
                 <field name="level_number"/>
                 <field name="code"/>
                 <field name="name"/>
@@ -14,7 +14,7 @@
                 <field name="bin_count"/>
                 <field name="capacity_utilization" widget="progressbar"/>
                 <field name="active" widget="boolean_toggle"/>
-            </tree>
+            </list>
         </field>
     </record>
     
@@ -79,6 +79,6 @@
     <record id="action_warehouse_level" model="ir.actions.act_window">
         <field name="name">Warehouse Levels</field>
         <field name="res_model">warehouse.level</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
