--- a/hdi/hdi_warehouse_3d/views/menu_views.xml
+++ b/hdi/hdi_warehouse_3d/views/menu_views.xml
@@ -24,49 +24,29 @@
               parent="stock.menu_stock_root"
               sequence="50"/>
 
-    <menuitem id="menu_warehouse_3d_view"
+    <!-- Main View Entry -->
+    <menuitem id="menu_warehouse_view"
               name="View"
               parent="menu_warehouse_3d_root"
-              sequence="10"/>
-
-    <!-- Unified View with 2D/3D Toggle -->
-    <menuitem id="menu_warehouse_unified_view"
-              name="Warehouse View"
-              parent="menu_warehouse_3d_view"
               action="action_warehouse_unified_view"
               sequence="1"/>
-
-    <!-- 2D Designer Menu (Admin) - Keep for direct access -->
-    <menuitem id="menu_w- Keep for direct access -->
-    <menuitem id="menu_warehouse_3d_viewer"
-              name="3D Viewer (Legacy)rehouse_3d_view"
-              action="action_warehouse_2d_designer"
-              groups="stock.group_stock_manager"
-              sequence="5"/>
-
-    <!-- 3D Viewer Menu (Operations) -->
-    <menuitem id="menu_warehouse_3d_viewer"
-              name="3D Viewer"
-              parent="menu_warehouse_3d_view"
-              action="action_warehouse_3d_viewer"
-              sequence="6"/>
 
     <!-- Data Management Menus -->
     <menuitem id="menu_warehouse_shelves"
               name="Shelves"
-              parent="menu_warehouse_3d_view"
+              parent="menu_warehouse_3d_root"
               action="action_warehouse_shelf"
               sequence="10"/>
 
     <menuitem id="menu_warehouse_areas"
               name="Areas"
-              parent="menu_warehouse_3d_view"
+              parent="menu_warehouse_3d_root"
               action="action_warehouse_area"
               sequence="20"/>
 
     <menuitem id="menu_warehouse_bins"
               name="Bins"
-              parent="menu_warehouse_3d_view"
+              parent="menu_warehouse_3d_root"
               action="action_warehouse_bins"
               sequence="30"/>
 </odoo>
